--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,7 +12,13 @@
         android:id="@+id/lrc_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_weight="1"
+        app:currentIndicateLrcColor="@color/colorAccent"
+        app:indicatorTextColor="@android:color/holo_orange_dark"
+        app:lrcHorizontalPadding="30dp"
+        app:playIcon="@drawable/play_music"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,15 +26,15 @@
 
         <TextView
             android:id="@+id/tv_start"
-            android:text="00:00"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:text="00:00"/>
 
         <SeekBar
             android:id="@+id/seek_play"
             android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
 
         <TextView
             android:id="@+id/tv_end"
