--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -19,7 +18,9 @@
         android:paddingRight="30dp"
         app:currentIndicateLrcColor="@color/colorAccent"
         app:indicatorTextColor="@android:color/holo_orange_dark"
-        app:playIcon="@drawable/play_music"/>
+        app:isLrcCurrentTextBold="true"
+        app:isLrcIndicatorTextBold="true"
+        app:playIcon="@drawable/play_music" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,18 +30,18 @@
             android:id="@+id/tv_start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="00:00"/>
+            android:text="00:00" />
 
         <SeekBar
             android:id="@+id/seek_play"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
 
         <TextView
             android:id="@+id/tv_end"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
@@ -55,14 +56,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Play"
-            android:textAllCaps="false"/>
+            android:textAllCaps="false" />
 
         <Button
             android:id="@+id/btn_pause"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Pause"
-            android:textAllCaps="false"/>
+            android:textAllCaps="false" />
 
 
     </LinearLayout>
